# portfolio

./: README.md  index.html  package-lock.json  package.json
npus-ai-aiops-ibm-poc-main/: README.md
npus-ai-aiops-ibm-poc-main/.github/: copilot-instructions.md
npus-ai-aiops-ibm-poc-main/.github/instructions/: python.instructions.md
npus-ai-aiops-ibm-poc-main/RAG-evaluation-cookbooks/: pyproject.toml
npus-ai-aiops-ibm-poc-main/RAG-evaluation-cookbooks/cookbooks/: experiment_deepeval_metrics.ipynb  experiment_ragas_metrics.ipynb
npus-ai-aiops-ibm-poc-main/RAG-evaluation-cookbooks/docs/: setup-langfuse.md
npus-ai-aiops-ibm-poc-main/metric_evaluation/: .gitignore  config.py
npus-ai-aiops-ibm-poc-main/metric_evaluation/.deepeval/: .deepeval_telemetry.txt
npus-ai-aiops-ibm-poc-main/metric_evaluation/docs/: ARCHITECTURE.md  FRAMEWORK_COMPARISON.md  METRICS_GUIDE.md  PRODUCTION_GUIDE.md  QUICKSTART.md
npus-ai-aiops-ibm-poc-main/metric_evaluation/src/: __init__.py
npus-ai-aiops-ibm-poc-main/metric_evaluation/src/evaluation/: storage_handler.py
npus-ai-aiops-ibm-poc-main/metric_evaluation/src/utils/: __init__.py  rate_limiter.py  retry_handler.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/: .gitignore
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/RAG-evaluation-cookbooks/: .env.example  .gitignore  .pre-commit-config.yaml  README.md
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/RAG-evaluation-cookbooks/cookbooks/: trace_evaluation_with_ragas.ipynb
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/RAG-evaluation-cookbooks/docs/: setup-openai.md
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/metric_evaluation/: README.md  batch_evaluation.py  comprehensive_demo.py  pyproject.toml  requirements.txt
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/metric_evaluation/docs/: USECASE_EVALUATION_GUIDE.md
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/metric_evaluation/src/: deepeval_metrics.py  evaluation_metrics.py  hf_dataset.py  nesgen_llm.py  rag_pipeline.py  sample_data.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/metric_evaluation/src/evaluation/: __init__.py  evaluator.py  metrics_calculator.py  result_aggregator.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/metric_evaluation/src/utils/: logger.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/tools-call-sample-app/: .env.example  .gitignore  setup.bat
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/: config.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/agent/: __init__.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/llm/: CHANGELOG_NESGEN_ENDPOINT_FIX.md  __init__.py  factory.py  nestle_chat_model_v2.py  openai_chat_model.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/observability/: USAGE.md  tracer.py
npus-ai-aiops-ibm-poc-main/npus-ai-aiops-ibm-poc-main/tools-call-sample-app/evaluation/: README.md  __init__.py  dataset.json  load_dataset.py
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/: README.md  pyproject.toml  setup.sh
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/: __init__.py
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/agent/: README.md  graph_v2.py  helpers.py  prompts.py
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/mcp_server/: __init__.py  server.py  tools_config.yaml
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/observability/: __init__.py
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/tools/: db.py  handlers.py
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/agent_eval/ui/: app.py
npus-ai-aiops-ibm-poc-main/tools-call-sample-app/evaluation/: eval_deepeval.py  eval_ragas.py  run_experiment.py  utils.py
src/: App.css  App.jsx  index.css
(+1 files in other folders)
