[project]
name = "rag-eval"
version = "0.1.0"
description = "RAG Evaluation Template with Langfuse + LangChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langfuse>=2.41.0",
    "openai>=1.52.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "ragas>=0.4.0",
    "datasets>=2.16.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-openai>=1.1.9",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.4",
    "pre-commit>=3.7.0",
]
notebook = [
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cookbooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.4",
    "pre-commit>=3.7.0",
]

# Ruff configuration (linting & formatting)
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errors, Pyflakes, Import sorting
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["rag_eval"]

# Pyright configuration (type checking)
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__"]
