[project]
name = "metric-evaluation"
version = "1.0.0"
description = "RAG Evaluation Framework with Langfuse Integration"
requires-python = ">=3.10"
dependencies = [
    # Core RAG and LLM libraries
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    # RAG Evaluation Frameworks
    "ragas>=0.1.0",
    "deepeval>=0.21.0",
    # Vector Database
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    # Langfuse Integration
    "langfuse>=3.0.0",
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "datasets>=2.16.0",
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    # Async Support
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
